--- a/103 - Python & SQL/DB2 Connection.ipynb
+++ b/103 - Python & SQL/DB2 Connection.ipynb
@@ -29,7 +29,7 @@
     }
    ],
    "source": [
-    "conn = ibm_db.connect(\"DATABASE=BLUDB;HOSTNAME=dashdb-txn-sbox-yp-lon02-01.services.eu-gb.bluemix.net;PORT=50001;PROTOCOL=TCPIP;UID=zfn84470;PWD=kl^g34ck58x7fn1s;Security=SSL;\",\"\",\"\")"
+    "conn = ibm_db.connect(\"DATABASE=BLUDB;HOSTNAME=dashdb-txn-sbox-yp-lon02-01.services.eu-gb.bluemix.net;PORT=50001;PROTOCOL=TCPIP;UID=;PWD=;Security=SSL;\",\"\",\"\")"
    ]
   },
   {
