machine learning 101 docs

--- a/103 - Python & SQL/DB2 Connection.ipynb
+++ b/103 - Python & SQL/DB2 Connection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,9 +13,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Exception",
+     "evalue": "[IBM][CLI Driver] SQL30082N  Security processing failed with reason \"5\" (\"USERID MISSING\").  SQLSTATE=08001 SQLCODE=-30082",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-29c8a61d3cd1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mconn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mibm_db\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpconnect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"DATABASE=BLUDB;HOSTNAME=dashdb-txn-sbox-yp-lon02-13.services.eu-gb.bluemix.net;PORT=50001;PROTOCOL=TCPIP;UID=;PWD=supersecret;\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mException\u001b[0m: [IBM][CLI Driver] SQL30082N  Security processing failed with reason \"5\" (\"USERID MISSING\").  SQLSTATE=08001 SQLCODE=-30082"
+     ]
+    }
+   ],
    "source": [
     "conn = ibm_db.pconnect(\"DATABASE=BLUDB;HOSTNAME=dashdb-txn-sbox-yp-lon02-13.services.eu-gb.bluemix.net;PORT=50001;PROTOCOL=TCPIP;UID=;PWD=supersecret;\",\"\",\"\")"
    ]
@@ -145,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8-final"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
