reorganised folders. environment variables. added SpeechToText

--- a/107 - Watson Services/Python + IBM Watson.ipynb
+++ b/107 - Watson Services/Python + IBM Watson.ipynb
@@ -20,7 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#  pip install --upgrade \"ibm-watson>=5.0.0\""
+    "#  pip install --upgrade ibm-watson\n",
+    "#  pip install python-dotenv"
    ]
   },
   {
@@ -36,10 +37,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Store environment variables in an external .dotenv file\n",
+    "# This means we don't have to share it when we share the notebook (like this)\n",
+    "# You can add your own .env file adjacent to this .ipynb notebook\n",
+    "# OR just replace the APIKEY and SERVICE_URL in the notebook with the ones you copy from IBM Cloud\n",
+    "\n",
+    "from os import path, getenv\n",
+    "from dotenv import load_dotenv"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Visual Recognition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load environment variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We're setting the path of our environment variable (dotenv_path)\n",
+    "# Then loading from that path\n",
+    "\n",
+    "# path.abspath('') returns the name of the folder this notebook runs in\n",
+    "# path.join() constructs the filepath\n",
+    "\n",
+    "dotenv_path = path.join(path.abspath(''), '.env')\n",
+    "load_dotenv(dotenv_path)"
    ]
   },
   {
@@ -55,7 +94,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "authenticator = IAMAuthenticator('{APIKEY}')\n",
+    "# We use getenv() to get the string that our environment variable references\n",
+    "authenticator = IAMAuthenticator(getenv('VIS_APIKEY'))\n",
     "authenticator"
    ]
   },
@@ -78,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vis_recog.set_service_url('{SERVICEURL}')"
+    "vis_recog.set_service_url(getenv('VIS_SERVICEURL'))"
    ]
   },
   {
@@ -223,9 +263,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('./Mantas.zip', 'rb') as mantas, open('./Stingrays.zip', 'rb') as stingrays, open('./Otters.zip', 'rb') as otters:\n",
+    "# If there are too many custom classifiers already, you may need to delete some (see below)\n",
+    "\n",
+    "with open('./Training Images/Mantas.zip', 'rb') as mantas, open('./Training Images/Stingrays.zip', 'rb') as stingrays, open('./Training Images/Otters.zip', 'rb') as otters:\n",
     "    model = vis_recog.create_classifier(\n",
-    "        name = 'Batoidea',\n",
+    "        name = 'Rays',\n",
     "        positive_examples = {'manta_ray': mantas, 'stingray': stingrays},\n",
     "        negative_examples = otters\n",
     "    ).get_result()"
@@ -258,6 +300,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This shows all the custom classifiers in the list\n",
+    "for classifier in classifiers['classifiers']:\n",
+    "    print(classifier['classifier_id'])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -270,17 +323,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for classifier in classifiers['classifiers']:\n",
-    "    print(classifier['classifier_id'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vis_recog.delete_classifier('Batoidea_550385256')"
+    "vis_recog.delete_classifier('Rays_1361634687')"
    ]
   },
   {
@@ -320,6 +363,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -341,12 +405,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TTSauthenticator = IAMAuthenticator('{APIKEY}')\n",
+    "TTSauthenticator = IAMAuthenticator(getenv('TTS_APIKEY'))\n",
     "text_to_speech = TextToSpeechV1(\n",
     "    authenticator = TTSauthenticator\n",
     ")\n",
     "\n",
-    "text_to_speech.set_service_url('https://gateway-lon.watsonplatform.net/text-to-speech/api')"
+    "text_to_speech.set_service_url(getenv('TTS_SERVICEURL'))"
    ]
   },
   {
@@ -405,12 +469,159 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('./TTS/TextToSpeech Output.wav', 'wb') as audio_test:\n",
+    "    audio_test.write(synthesis.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Speech to Text"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('Test.wav', 'wb') as audio_test:\n",
-    "    audio_test.write(synthesis.content)"
+    "from ibm_watson import SpeechToTextV1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "authenticator = IAMAuthenticator(getenv('STT_APIKEY'))\n",
+    "speech_to_text = SpeechToTextV1(\n",
+    "    authenticator=authenticator\n",
+    ")\n",
+    "\n",
+    "speech_to_text.set_service_url(getenv('STT_SERVICEURL'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### List Models and Get Details"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "speech_models = speech_to_text.list_models().get_result()\n",
+    "print(json.dumps(speech_models, indent=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "speech_model = speech_to_text.get_model('en-US_BroadbandModel').get_result()\n",
+    "print(json.dumps(speech_model, indent=2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Recognise Speech"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/chungleu@uk.ibm.com/Documents/IBM/C&A/Cognitive Technical Community/Data Science 101/107 - Watson Services/STT/Person Woman Man Camera TV.mp3'"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Use the Trump person-woman-man-camera-tv\n",
+    "audio_location = path.join(path.abspath(''), 'STT/Person Woman Man Camera TV.mp3')\n",
+    "audio_location"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(audio_location, 'rb') as audio_file:\n",
+    "    transcript = speech_to_text.recognize(\n",
+    "            audio=audio_file,\n",
+    "            content_type='audio/mp3',\n",
+    "            model='en-US_BroadbandModel'\n",
+    "        ).get_result()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Transform Transcript to JSON and Write to File"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json_transcript = json.dumps(transcript, indent=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('./STT/TrumpTranscript.json', 'w') as outputfile:\n",
+    "    outputfile.write(json_transcript)"
    ]
   },
   {
